fix exception